--- a/App/Application/GymTracker/GymTracker.csproj
+++ b/App/Application/GymTracker/GymTracker.csproj
@@ -97,6 +97,9 @@
     <Compile Include="Views\SubViews\ResetFindAcct.xaml.cs">
       <DependentUpon>ResetFindAcct.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\SubViews\ResetSecurityQues.xaml.cs">
+      <DependentUpon>ResetSecurityQues.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -126,6 +129,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\SubViews\ResetFindAcct.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SubViews\ResetSecurityQues.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
